--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,16 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.couchbase.client/java-client -->
 		<dependency>
 			<groupId>com.couchbase.client</groupId>
