--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,6 @@ cb:
   kvTimeOut: 10000
   hosts: localhost
   cluster:
-    username:
-    password:
-    bucketname:
+    username: srinath.kavuri
+    password: kavuri654
+    bucketname: user-profile
