--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,3 +29,11 @@ jobs:
           echo "<settings><servers><server><id>gh</id><username>$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $1}')</username><password>\${env.GITHUB_TOKEN}</password></server></servers></settings>" > ~/.m2/settings.xml
           REPO="gh::default::https://maven.pkg.github.com/${GITHUB_REPOSITORY}"
           mvn deploy -DaltReleaseDeploymentRepository="${REPO}" -DaltSnapshotDeploymentRepository="${REPO}"
+    - name: create artifact directory
+      run: mkdir artifact
+    - name: copy jar file to artifact directory
+      run: cp target/techblog.jar artifact
+    - uses: actions/upload-artifact@v1
+      with:
+        name: BuildArtifact
+        path: artifact
